test/testData/parser/negative/expressions/sizeof.c

struct S;

void testSizeOf() {
  int a = sizeof (struct S);
  int b = sizeof c;
}
