test/testData/parser/negative/expressions/sizeof.err
test/testData/parser/negative/expressions/sizeof.c:11:5: error: invalid application of 'sizeof' to an incomplete type 'STRUCT S'
test/testData/parser/negative/expressions/sizeof.c:18:6: error: use of undeclared identifier 'c'
